Implementing the form that works.

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -2,14 +2,14 @@
 <html lang="en">
     <body>
         <fieldset>
-            <legend>Form</legend>
+            <legend>Order form</legend>
             {{ form_start(form) }}
                 <fieldset>
-                    <legend>Billing form row</legend>
+                    <legend>Billing form</legend>
                     {{ form_row(form.billingAddress)}}
                 </fieldset>
                 <fieldset>
-                    <legend>Shipping form row</legend>
+                    <legend>Shipping form</legend>
                     {{ form_row(form.shippingAddress)}}
                 </fieldset>
             {{ form_row(form) }}
